--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Concepts of Programming Languages 第十版 程序设计语言原理 (（美）賽巴斯塔（Sebesta，R.W.）)  》/目录.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Concepts of Programming Languages 第十版 程序设计语言原理 (（美）賽巴斯塔（Sebesta，R.W.）)  》/目录.md
@@ -1,3 +1,321 @@
-程序设计语言原理 (（美）賽巴斯塔（Sebesta，R.W.）)   Concepts of Programming Languages 第十版.md
+文件名：Concepts of Programming Languages 第十版.md
+
+程序设计语言原理 (（美）賽巴斯塔（Sebesta，R.W.）)   
 
 <img src="https://p.ipic.vip/h6jovb.png" alt="740fd4a48a8f95d6dec49189627ff884" style="zoom:25%;" />
+
+**第1章 编程语言** (Chapter 1: Programming Languages) 1  
+1.1 编程语言学 (Programming Linguistics) 3  
+1.2 历史发展 (Historical Development) 6  
+小结 (Summary) 10  
+进一步阅读 (Further Reading) 10  
+练习 (Exercises) 10  
+
+**第2章 值与类型** (Chapter 2: Values and Types) 15  
+2.1 类型 (Types) 15  
+2.2 原始类型 (Primitive Types) 16  
+2.2.1 内建原始类型 (Built-in Primitive Types) 16  
+2.2.2 用户定义的原始类型 (Defined Primitive Types) 18  
+2.2.3 离散原始类型 (Discrete Primitive Types) 19  
+2.3 复合类型 (Composite Types) 20  
+2.3.1 笛卡尔积、结构体、记录 (Cartesian Products, Structures, and Records) 21  
+2.3.2 映射、数组、函数 (Mappings, Arrays, and Functions) 23  
+2.3.3 不相交并集、判别记录、对象 (Disjoint Unions, Discriminated Records, and Objects) 27  
+2.4 递归类型 (Recursive Types) 33  
+2.4.1 列表 (Lists) 33  
+2.4.2 字符串 (Strings) 35  
+2.4.3 一般递归类型 (Recursive Types in General) 36  
+2.5 类型系统 (Type Systems) 37  
+2.5.1 静态类型与动态类型 (Static vs Dynamic Typing) 38  
+2.5.2 类型等价 (Type Equivalence) 40  
+2.5.3 类型完备性原则 (The Type Completeness Principle) 42  
+2.6 表达式 (Expressions) 43  
+2.6.1 字面量 (Literals) 43  
+2.6.2 构造 (Constructions) 44  
+2.6.3 函数调用 (Function Calls) 46  
+2.6.4 条件表达式 (Conditional Expressions) 47  
+2.6.5 迭代表达式 (Iterative Expressions) 48  
+2.6.6 常量与变量的访问 (Constant and Variable Accesses) 49  
+2.7 实现注记 (Implementation Notes) 49  
+小结 (Summary) 52  
+进一步阅读 (Further Reading) 52  
+练习 (Exercises) 52  
+
+**第3章 变量与存储** (Chapter 3: Variables and Storage) 57  
+3.1 变量与存储 (Variables and Storage) 57  
+3.2 简单变量 (Simple Variables) 58  
+3.3 复合变量 (Composite Variables) 59  
+3.3.1 全部更新与选择更新 (Total vs Selective Update) 60  
+3.3.2 静态数组、动态数组与灵活数组 (Static vs Dynamic vs Flexible Arrays) 61  
+3.4 拷贝语义与引用语义 (Copy Semantics vs Reference Semantics) 63  
+3.5 生命周期 (Lifetime) 66  
+3.5.1 全局变量与局部变量 (Global and Local Variables) 66  
+3.5.2 堆变量 (Heap Variables) 68  
+3.5.3 持久变量 (Persistent Variables) 71  
+3.6 指针 (Pointers) 73  
+3.6.1 指针与递归类型 (Pointers and Recursive Types) 74  
+3.6.2 悬挂指针 (Dangling Pointers) 75  
+3.7 命令 (Commands) 77  
+3.7.1 空操作 (Skips) 77  
+3.7.2 赋值 (Assignments) 77  
+3.7.3 过程调用 (Proper Procedure Calls) 78  
+3.7.4 顺序命令 (Sequential Commands) 79  
+3.7.5 并行命令 (Collateral Commands) 79  
+3.7.6 条件命令 (Conditional Commands) 80  
+3.7.7 迭代命令 (Iterative Commands) 82  
+3.8 带副作用的表达式 (Expressions with Side Effects) 85  
+3.8.1 命令表达式 (Command Expressions) 86  
+3.8.2 表达式导向语言 (Expression-Oriented Languages) 87  
+3.9 实现注记 (Implementation Notes) 87  
+小结 (Summary) 91  
+进一步阅读 (Further Reading) 91  
+练习 (Exercises) 92  
+
+**第4章 绑定与作用域** (Chapter 4: Bindings and Scope) 95  
+4.1 绑定与环境 (Bindings and Environments) 95  
+4.2 作用域 (Scope) 97  
+4.2.1 块结构 (Block Structure) 97  
+4.2.2 作用域与可见性 (Scope and Visibility) 99  
+4.2.3 静态作用域与动态作用域 (Static vs Dynamic Scoping) 100  
+4.3 声明 (Declarations) 102  
+4.3.1 类型声明 (Type Declarations) 102  
+4.3.2 常量声明 (Constant Declarations) 104  
+4.3.3 变量声明 (Variable Declarations) 104  
+4.3.4 过程定义 (Procedure Definitions) 105  
+4.3.5 并行声明 (Collateral Declarations) 105  
+4.3.6 顺序声明 (Sequential Declarations) 106  
+4.3.7 递归声明 (Recursive Declarations) 107  
+4.4 块 (Blocks) 108  
+4.4.1 块命令 (Block Commands) 109  
+4.4.2 块表达式 (Block Expressions) 110  
+4.4.3 限定原则 (The Qualification Principle) 110  
+小结 (Summary) 111  
+进一步阅读 (Further Reading) 112  
+练习 (Exercises) 112  
+
+**第5章 过程抽象** (Chapter 5: Procedural Abstraction) 115  
+5.1 函数过程与适当过程 (Function Procedures and Proper Procedures) 115  
+5.1.1 函数过程 (Function Procedures) 116  
+5.1.2 适当过程 (Proper Procedures) 118  
+5.1.3 抽象原则 (The Abstraction Principle) 120  
+5.2 参数与实参 (Parameters and Arguments) 122  
+5.2.1 拷贝参数机制 (Copy Parameter Mechanisms) 124  
+5.2.2 引用参数机制 (Reference Parameter Mechanisms) 125  
+5.2.3 对应原则 (The Correspondence Principle) 128  
+5.3 实现注记 (Implementation Notes) 129  
+小结 (Summary) 131  
+进一步阅读 (Further Reading) 131  
+练习 (Exercises) 131  
+
+**第6章 数据抽象** (Chapter 6: Data Abstraction) 135  
+6.1 程序单元、包与封装 (Program Units, Packages, and Encapsulation) 135  
+6.1.1 包 (Packages) 136  
+6.1.2 封装 (Encapsulation) 137  
+6.2 抽象类型 (Abstract Types) 140  
+6.3 对象与类 (Objects and Classes) 145  
+6.3.1 类 (Classes) 146  
+6.3.2 子类与继承 (Subclasses and Inheritance) 151  
+6.3.3 抽象类 (Abstract Classes) 157  
+6.3.4 单继承与多继承 (Single vs Multiple Inheritance) 160  
+6.3.5 接口 (Interfaces) 162  
+6.4 实现注记 (Implementation Notes) 164  
+小结 (Summary) 166  
+进一步阅读 (Further Reading) 167  
+练习 (Exercises) 167  
+
+**第7章 泛型抽象** (Chapter 7: Generic Abstraction) 171  
+7.1 泛型单元与实例化 (Generic Units and Instantiation) 171  
+7.1.1 ADA 中的泛型包 (Generic Packages in ADA) 172  
+7.1.2 C++ 中的泛型类 (Generic Classes in C++) 174  
+7.2 类型与类参数 (Type and Class Parameters) 176  
+7.2.1 ADA 中的类型参数 (Type Parameters in ADA) 176  
+7.2.2 C++ 中的类型参数 (Type Parameters in C++) 180  
+7.2.3 JAVA 中的类参数 (Class Parameters in JAVA) 183  
+7.3 实现注记 (Implementation Notes) 186  
+小结 (Summary) 188  
+进一步阅读 (Further Reading) 189  
+练习 (Exercises) 189  
+
+**第8章 类型系统** (Chapter 8: Type Systems) 191  
+8.1 包含多态性 (Inclusion Polymorphism) 191  
+8.1.1 类型与子类型 (Types and Subtypes) 191  
+8.1.2 类与子类 (Classes and Subclasses) 195  
+8.2 参数化多态性 (Parametric Polymorphism) 196  
+8.2.1 泛型 (Generics) 196  
+8.2.2 类型约束 (Type Constraints) 199  
+8.3 多态的实现 (Polymorphism Implementation) 202  
+8.3.1 静态与动态类型检查 (Static vs Dynamic Type Checking) 202  
+8.3.2 多态方法的实现 (Implementation of Polymorphic Methods) 204  
+8.4 类型安全 (Type Safety) 206  
+8.4.1 类型检查 (Type Checking) 206  
+8.4.2 类型推断 (Type Inference) 209  
+8.5 实现注记 (Implementation Notes) 211  
+小结 (Summary) 213  
+进一步阅读 (Further Reading) 213  
+练习 (Exercises) 214  
+
+**第9章 面向对象编程** (Chapter 9: Object-Oriented Programming) 217  
+9.1 面向对象编程的基础 (Foundations of Object-Oriented Programming) 217  
+9.1.1 对象与类 (Objects and Classes) 217  
+9.1.2 封装与信息隐藏 (Encapsulation and Information Hiding) 220  
+9.1.3 继承 (Inheritance) 222  
+9.1.4 多态性 (Polymorphism) 225  
+9.2 面向对象编程的设计问题 (Design Issues in Object-Oriented Programming) 228  
+9.2.1 单继承与多继承 (Single Inheritance vs Multiple Inheritance) 228  
+9.2.2 动态绑定 (Dynamic Binding) 231  
+9.2.3 对象的生命周期 (Object Lifetimes) 233  
+9.3 面向对象编程的实现 (Implementation of Object-Oriented Programming) 235  
+9.3.1 类与对象的存储布局 (Storage Layout for Classes and Objects) 235  
+9.3.2 方法调用的实现 (Implementation of Method Calls) 238  
+9.3.3 虚方法与动态调度 (Virtual Methods and Dynamic Dispatch) 240  
+9.4 实现注记 (Implementation Notes) 242  
+小结 (Summary) 244  
+进一步阅读 (Further Reading) 245  
+练习 (Exercises) 245  
+
+**第10章 并发编程** (Chapter 10: Concurrent Programming) 249  
+10.1 并发编程的基础 (Foundations of Concurrent Programming) 249  
+10.1.1 进程与线程 (Processes and Threads) 249  
+10.1.2 并发控制 (Concurrency Control) 252  
+10.1.3 竞争条件与死锁 (Race Conditions and Deadlock) 255  
+10.2 并发编程的设计问题 (Design Issues in Concurrent Programming) 258  
+10.2.1 同步与异步通信 (Synchronous vs Asynchronous Communication) 258  
+10.2.2 锁与信号量 (Locks and Semaphores) 261  
+10.3 并发编程的实现 (Implementation of Concurrent Programming) 264  
+10.3.1 线程的实现 (Implementation of Threads) 264  
+10.3.2 同步机制的实现 (Implementation of Synchronization Mechanisms) 266  
+10.4 实现注记 (Implementation Notes) 269  
+小结 (Summary) 271  
+进一步阅读 (Further Reading) 272  
+练习 (Exercises) 272  
+
+**第11章 逻辑编程** (Chapter 11: Logic Programming) 275  
+11.1 逻辑编程的基础 (Foundations of Logic Programming) 275  
+11.1.1 谓词逻辑 (Predicate Logic) 275  
+11.1.2 归结原理 (Resolution Principle) 278  
+11.2 Prolog语言 (Prolog Language) 281  
+11.2.1 基本语法 (Basic Syntax) 281  
+11.2.2 事实与规则 (Facts and Rules) 283  
+11.2.3 目标与查询 (Goals and Queries) 285  
+11.3 逻辑编程的设计问题 (Design Issues in Logic Programming) 287  
+11.3.1 归结顺序与效率 (Resolution Order and Efficiency) 287  
+11.3.2 背景知识的管理 (Management of Background Knowledge) 290  
+11.4 逻辑编程的实现 (Implementation of Logic Programming) 292  
+11.4.1 Prolog系统的实现 (Implementation of Prolog Systems) 292  
+11.4.2 查询的执行与优化 (Execution and Optimization of Queries) 294  
+11.5 实现注记 (Implementation Notes) 297  
+小结 (Summary) 299  
+进一步阅读 (Further Reading) 299  
+练习 (Exercises) 299  
+
+**第12章 函数式编程** (Chapter 12: Functional Programming) 303  
+12.1 函数式编程的基础 (Foundations of Functional Programming) 303  
+12.1.1 纯函数与副作用 (Pure Functions and Side Effects) 303  
+12.1.2 高阶函数与递归 (Higher-Order Functions and Recursion) 305  
+12.1.3 惰性求值 (Lazy Evaluation) 307  
+12.2 函数式编程语言 (Functional Programming Languages) 309  
+12.2.1 LISP语言 (LISP Language) 309  
+12.2.2 Haskell语言 (Haskell Language) 312  
+12.3 函数式编程的设计问题 (Design Issues in Functional Programming) 315  
+12.3.1 惰性与严格求值 (Lazy vs Eager Evaluation) 315  
+12.3.2 模式匹配 (Pattern Matching) 318  
+12.4 实现注记 (Implementation Notes) 321  
+小结 (Summary) 323  
+进一步阅读 (Further Reading) 323  
+练习 (Exercises) 324  
+
+**第13章 脚本语言** (Chapter 13: Scripting Languages) 327  
+13.1 脚本语言的基础 (Foundations of Scripting Languages) 327  
+13.1.1 动态类型与解释执行 (Dynamic Typing and Interpreted Execution) 327  
+13.1.2 字符串处理与正则表达式 (String Processing and Regular Expressions) 329  
+13.2 常见的脚本语言 (Common Scripting Languages) 331  
+13.2.1 Python语言 (Python Language) 331  
+13.2.2 Perl语言 (Perl Language) 334  
+13.3 脚本语言的设计问题 (Design Issues in Scripting Languages) 337  
+13.3.1 动态范围与静态范围 (Dynamic vs Lexical Scoping) 337  
+13.3.2 错误处理与调试 (Error Handling and Debugging) 340  
+13.4 实现注记 (Implementation Notes) 343  
+小结 (Summary) 345  
+进一步阅读 (Further Reading) 346  
+练习 (Exercises) 346  
+
+**第14章 编程语言的未来** (Chapter 14: The Future of Programming Languages) 349  
+14.1 编程语言的演进 (The Evolution of Programming Languages) 349  
+14.2 编程范式的融合 (Fusion of Programming Paradigms) 352  
+14.3 新兴技术与语言设计 (Emerging Technologies and Language Design) 355  
+14.4 未来的挑战 (Challenges for the Future) 357  
+14.5 实现注记 (Implementation Notes) 359  
+小结 (Summary) 361  
+进一步阅读 (Further Reading) 362  
+练习 (Exercises) 362  
+
+**第15章 安全与异常处理** (Chapter 15: Security and Exception Handling) 365  
+15.1 安全编程的基础 (Foundations of Secure Programming) 365  
+15.1.1 语言设计中的安全性 (Security in Language Design) 365  
+15.1.2 类型安全与内存安全 (Type Safety and Memory Safety) 367  
+15.2 异常处理的基础 (Foundations of Exception Handling) 370  
+15.2.1 异常处理的基本概念 (Basic Concepts of Exception Handling) 370  
+15.2.2 异常的定义与传播 (Definition and Propagation of Exceptions) 373  
+15.3 现代编程语言中的异常处理 (Exception Handling in Modern Programming Languages) 376  
+15.3.1 C++中的异常处理 (Exception Handling in C++) 376  
+15.3.2 Java中的异常处理 (Exception Handling in Java) 378  
+15.4 异常处理的设计问题 (Design Issues in Exception Handling) 380  
+15.4.1 受检与非受检异常 (Checked vs Unchecked Exceptions) 380  
+15.4.2 异常处理的性能影响 (Performance Impacts of Exception Handling) 382  
+15.5 实现注记 (Implementation Notes) 384  
+小结 (Summary) 386  
+进一步阅读 (Further Reading) 386  
+练习 (Exercises) 387  
+
+**第16章 编程语言实现** (Chapter 16: Implementation of Programming Languages) 391  
+16.1 编译器与解释器的基础 (Foundations of Compilers and Interpreters) 391  
+16.1.1 编译过程 (The Compilation Process) 391  
+16.1.2 解释执行 (Interpreted Execution) 394  
+16.2 语法分析与词法分析 (Syntax and Lexical Analysis) 397  
+16.2.1 词法分析器的实现 (Implementation of Lexical Analyzers) 397  
+16.2.2 语法分析器的实现 (Implementation of Parsers) 399  
+16.3 中间代码生成 (Intermediate Code Generation) 402  
+16.3.1 栈式中间代码 (Stack-Based Intermediate Code) 402  
+16.3.2 三地址码 (Three-Address Code) 404  
+16.4 代码优化 (Code Optimization) 407  
+16.4.1 局部优化与全局优化 (Local vs Global Optimization) 407  
+16.4.2 循环优化与内联扩展 (Loop Optimization and Inlining) 410  
+16.5 代码生成 (Code Generation) 413  
+16.5.1 寄存器分配 (Register Allocation) 413  
+16.5.2 指令选择与调度 (Instruction Selection and Scheduling) 416  
+16.6 实现注记 (Implementation Notes) 419  
+小结 (Summary) 421  
+进一步阅读 (Further Reading) 422  
+练习 (Exercises) 422  
+
+**第17章 内存管理** (Chapter 17: Memory Management) 425  
+17.1 内存管理的基础 (Foundations of Memory Management) 425  
+17.1.1 静态内存分配与动态内存分配 (Static vs Dynamic Memory Allocation) 425  
+17.1.2 堆与栈的内存管理 (Heap and Stack Memory Management) 427  
+17.2 垃圾回收 (Garbage Collection) 430  
+17.2.1 引用计数法 (Reference Counting) 430  
+17.2.2 标记-清除算法 (Mark-and-Sweep Algorithm) 433  
+17.2.3 标记-整理算法 (Mark-and-Compact Algorithm) 435  
+17.2.4 分代垃圾回收 (Generational Garbage Collection) 437  
+17.3 内存管理的设计问题 (Design Issues in Memory Management) 440  
+17.3.1 手动内存管理与自动内存管理 (Manual vs Automatic Memory Management) 440  
+17.3.2 垃圾回收的性能影响 (Performance Impacts of Garbage Collection) 442  
+17.4 实现注记 (Implementation Notes) 445  
+小结 (Summary) 447  
+进一步阅读 (Further Reading) 448  
+练习 (Exercises) 448  
+
+**第18章 并行编程** (Chapter 18: Parallel Programming) 451  
+18.1 并行编程的基础 (Foundations of Parallel Programming) 451  
+18.1.1 并行计算模型 (Parallel Computation Models) 451  
+18.1.2 数据并行与任务并行 (Data Parallelism vs Task Parallelism) 454  
+18.2 并行编程的设计问题 (Design Issues in Parallel Programming) 457  
+18.2.1 同步与通信机制 (Synchronization and Communication Mechanisms) 457  
+18.2.2 负载均衡与任务调度 (Load Balancing and Task Scheduling) 460  
+18.3 并行编程的实现 (Implementation of Parallel Programming) 463  
+18.3.1 多线程的实现 (Implementation of Multithreading) 463  
+18.3.2 分布式内存模型 (Distributed Memory Model) 466  
+18.4 实现注记 (Implementation Notes) 469  
+小结 (Summary) 471  
+进一步阅读 (Further Reading) 472  
+练习 (Exercises) 472  
